# filter-every-well

./: .gitignore  README.md  filter-every-well-api.service  pyproject.toml  test_Waters.py
src/filter_every_well/: __init__.py  api.py  barl.py  claims.py  cli.py  meow.py  models.py  pp96.py  test.relay.py  test_Waters.py  test_led_waters.py  waters_box.py
src/filter_every_well.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
